Post-v2.8.0
--------------------
   - Nothing yet.

v2.8.0 - xx xxx xxxx
---------------------
   - ovs-ofctl:
     * ovs-ofctl can now accept and display port names in place of numbers.  By
       default it always accepts names and in interactive use it displays them;
       use --names or --no-names to override.  See ovs-ofctl(8) for details.
     * "ovs-ofctl dump-flows" now accepts --no-stats to omit flow statistics.
   - New ovs-dpctl command "ct-stats-show" to show connection tracking stats.
   - Tunnels:
     * Added support to set packet mark for tunnel endpoint using
       `egress_pkt_mark` OVSDB option.
     * When using Linux kernel datapath tunnels may be created using rtnetlink.
       This will allow us to take advantage of new tunnel features without
       having to make changes to the vport modules.
   - EMC insertion probability is reduced to 1% and is configurable via
     the new 'other_config:emc-insert-inv-prob' option.
   - DPDK:
     * DPDK log messages redirected to OVS logging subsystem.
       Log level can be changed in a usual OVS way using
       'ovs-appctl vlog' commands for 'dpdk' module. Lower bound
       still can be configured via extra arguments for DPDK EAL.
     * dpdkvhostuser ports are marked as deprecated.  They will be removed
       in an upcoming release.
     * Support for DPDK v17.05.1.
   - IPFIX now provides additional counters:
     * Total counters since metering process startup.
     * Per-flow TCP flag counters.
     * Multicast, broadcast, and unicast counters.
   - New support for multiple VLANs (802.1ad or "QinQ"), including a new
     "dot1q-tunnel" port VLAN mode.
   - In ovn-vsctl and vtep-ctl, record UUIDs in commands may now be
     abbreviated to 4 hex digits.
   - Userspace Datapath:
     * Added NAT support for userspace datapath.
     * Added FTP and TFTP support with NAT for userspace datapath.
     * Experimental NSH (Network Service Header) support in userspace datapath.
   - OVN: